@@ -3,17 +3,14 @@ package org.example.hackaton.chats.domain.mapper;
 import org.example.hackaton.agent.api.dto.response.AgentChatResponse;
 import org.example.hackaton.agent.db.AgentEntity;
 import org.example.hackaton.agent.domain.AgentChatResponseMapper;
+import org.example.hackaton.chats.api.dto.responese.ChatDTO;
 import org.example.hackaton.chats.api.dto.responese.ChatResponse;
 import org.example.hackaton.chats.db.ChatEntity;
-import org.mapstruct.Mapper;
-import org.mapstruct.Mapping;
-import org.mapstruct.Named;
-import org.springframework.beans.factory.annotation.Autowired;
+import org.example.hackaton.messages.db.MessageEntity;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Component
 public class ChatMapper {
@@ -24,7 +21,7 @@ public class ChatMapper {
         this.agentChatResponseMapper = agentChatResponseMapper;
     }
 
-    public ChatResponse convertEntityToDTO(ChatEntity chatEntity) {
+    public ChatResponse convertEntityToDTOResponse(ChatEntity chatEntity) {
         if (chatEntity == null) return null;
 
         Set<AgentEntity> agents = chatEntity.getAgents();
@@ -32,7 +29,7 @@ public class ChatMapper {
         AgentChatResponse agent2 = null;
 
         if (agents != null && !agents.isEmpty()) {
-            List<AgentEntity> agentList = agents.stream().collect(Collectors.toList());
+            List<AgentEntity> agentList = agents.stream().toList();
 
             agent1 = agentChatResponseMapper.convertEntityToDTO(agentList.get(0));
 
@@ -45,6 +42,22 @@ public class ChatMapper {
                 chatEntity.getName(),
                 agent1,
                 agent2
+        );
+    }
+
+
+    public ChatDTO convertEntityToDTO(ChatEntity chatEntity) {
+        if (chatEntity == null) return null;
+
+        List<String>  messages = chatEntity.getMessages()
+                .stream()
+                .map(MessageEntity::getContent)
+                .toList();
+        return new ChatDTO(
+                chatEntity.getId(),
+                chatEntity.getName(),
+                messages,
+                chatEntity.getCreatedAt()
         );
     }
 }
